retrieve_ENO_DEV1/objects/Performer__c.object
<CustomObject>
    <description>Shows the Performer Profile</description>
    <fields>
        <fullName>Across_Back__c</fullName>
        <label>Across Back</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Across_Chest__c</fullName>
        <label>Across Chest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Across_Nape_in_cm__c</fullName>
        <label>Across Nape (in cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Across_Occipital_Bone__c</fullName>
        <label>Across Occipital Bone (in cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Across_Shoulders__c</fullName>
        <label>Across Shoulders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Emergency_Name_and_Contact__c</fullName>
        <label>Additional Emergency Name and Contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_Country__c</fullName>
        <label>Address - Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_First_Line__c</fullName>
        <label>Address - First Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_City__c</fullName>
        <label>Address Line - City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Post_code__c</fullName>
        <label>Address - Post code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Second_Line__c</fullName>
        <label>Address - Second Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_while_engaged_with_ENO__c</fullName>
        <label>Address while engaged with ENO</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Age_Size_Clothes_Worn__c</fullName>
        <label>Age/Size Clothes Worn</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>YEAR(TODAY()) - YEAR(DOB__c) -
IF(
       OR (
                  MONTH(TODAY()) &lt; MONTH(DOB__c),
                  AND(
                      MONTH(TODAY()) == MONTH(DOB__c),
                      DAY(TODAY()) &lt; DAY(DOB__c)
                    )
        ),
        1,
        0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+Agent__r.AccountId, Agent__r.Account.Name, &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Performers</relationshipLabel>
        <relationshipName>Performers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agent_s_Address__c</fullName>
        <formula>Agent__r.MailingStreet + BR() +
Agent__r.MailingPostalCode + BR() +
Agent__r.MailingCity + BR() +
Agent__r.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent&apos;s Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_s_Assistant__c</fullName>
        <label>Agent&apos;s Assistant</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_s_Email__c</fullName>
        <formula>Agent__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent&apos;s Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_s_Phone__c</fullName>
        <formula>Agent__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent&apos;s Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allergies__c</fullName>
        <label>Allergies</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alternative_Emergency_Contact_number__c</fullName>
        <label>Alternative Emergency Contact number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Any_other_Costume_only_related_allergies__c</fullName>
        <inlineHelpText>eg Wool, metal earrings etc</inlineHelpText>
        <label>Any other Costume-only related allergies</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Any_other_allergies__c</fullName>
        <description>Any other allergies?</description>
        <inlineHelpText>eg latex/ perfume/sulphites etc</inlineHelpText>
        <label>Any other allergies?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Armhole_depth__c</fullName>
        <inlineHelpText>from nape to armpit level</inlineHelpText>
        <label>Armhole depth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Around_Ankle__c</fullName>
        <label>Around Ankle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Around_Calf__c</fullName>
        <label>Around Calf</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Around_Elbow_Bent__c</fullName>
        <label>Around Elbow (Bent)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Around_Knee_Bent__c</fullName>
        <label>Around Knee (Bent)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Around_Knee_Small__c</fullName>
        <label>Around Knee Small</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Around_Knee__c</fullName>
        <label>Around Knee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Around_Thigh__c</fullName>
        <label>Around Thigh</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Around_Top_Arm__c</fullName>
        <label>Around Top Arm</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Around_Wrist__c</fullName>
        <label>Around Wrist</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assistant_Agent_s_Email__c</fullName>
        <label>Assistant Agent&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assistant_Agent_s_Phone__c</fullName>
        <label>Assistant Agent&apos;s Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Back_nape_to_bust_point__c</fullName>
        <label>Back nape to bust point</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Back_nape_to_front_waist__c</fullName>
        <label>Back nape to front waist</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Back_nape_to_under_bust__c</fullName>
        <label>Back nape to under-bust</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Block__c</fullName>
        <inlineHelpText>Please insert name of person/s who made/worked on the Block</inlineHelpText>
        <label>Block</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bra_Size_If_worn__c</fullName>
        <label>Bra Size (if worn)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bra_Size__c</fullName>
        <label>Bra Size</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bust_Expanded__c</fullName>
        <label>Bust Expanded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bust_Front__c</fullName>
        <label>Bust Front</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bust_To_Bust__c</fullName>
        <label>Bust To Bust</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bust__c</fullName>
        <label>Bust</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chest_Expanded__c</fullName>
        <label>Chest Expanded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chest__c</fullName>
        <label>Chest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Circumference_in_cm__c</fullName>
        <label>Circumference (in cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clothing_Sizes__c</fullName>
        <label>Clothing Sizes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Collar_Singing__c</fullName>
        <label>Collar (Singing)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cross_chest_pitch_point__c</fullName>
        <label>Cross chest- pitch point</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cross_chest_side_seam_to_side_seam__c</fullName>
        <label>Cross chest (side seam to side seam)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Taken__c</fullName>
        <label>Date Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deceased?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diaphragm__c</fullName>
        <label>Diaphragm</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dietary_requirements__c</fullName>
        <label>Dietary requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dress_Size__c</fullName>
        <label>Dress Size</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ear_to_Ear_around_Back_in_cm__c</fullName>
        <label>Ear to Ear around Back (in cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ear_to_Ear_over_Top_in_cm__c</fullName>
        <label>Ear to Ear over Top (in cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ear_to_Nape_Left_in_cm__c</fullName>
        <label>Ear to Nape Left (in cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ear_to_Nape_Right_in_cm__c</fullName>
        <label>Ear to Nape Right (in cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ear_to_Nape_in_cm__c</fullName>
        <label>Ear to Nape (in cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ears_Pierced_Child__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ears Pierced Child?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ears_Pierced__c</fullName>
        <label>Ears Pierced?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_address__c</fullName>
        <label>Emergency Contact address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_name__c</fullName>
        <label>Emergency Contact name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_number__c</fullName>
        <label>Emergency Contact number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Forearm__c</fullName>
        <label>Forearm</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Foundation_Shade__c</fullName>
        <label>Foundation Shade</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Front_neck_to_waist__c</fullName>
        <label>Front neck to waist</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Front_to_Nape_in_cm__c</fullName>
        <label>Front to Nape (in cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Full_Girth__c</fullName>
        <label>Full Girth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Glove_Size__c</fullName>
        <label>Glove Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gloves__c</fullName>
        <label>Gloves</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Half_Back__c</fullName>
        <label>Half Back</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Half_Back_to_Elbow__c</fullName>
        <label>Half Back to Elbow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Half_Back_to_Wrist__c</fullName>
        <label>Half Back to Wrist</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Half_Girth__c</fullName>
        <label>Half Girth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Head__c</fullName>
        <label>Head</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Headshot_Image_Url__c</fullName>
        <label>Headshot Image Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Headshot_Image__c</fullName>
        <formula>IF(NOT(ISBLANK(Headshot_Image_Url__c)),IMAGE( Headshot_Image_Url__c , Name ),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Headshot Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Period_Waist__c</fullName>
        <label>High Period Waist</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hips__c</fullName>
        <label>Hips</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>How_name_should_appear_on_call_sheet__c</fullName>
        <label>How name should appear on call sheet</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Other_please_specify__c</fullName>
        <label>If &apos;Other&apos; please specify:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>In_the_event_of_a_medical_emergency__c</fullName>
        <inlineHelpText>Are there any special instructions that should be followed relating to your condition?</inlineHelpText>
        <label>In the Event of a Medical Emergency</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inside_Arm_to_Wrist__c</fullName>
        <label>Inside Arm to Wrist</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inside_Leg_to_Ankle__c</fullName>
        <label>Inside Leg to Ankle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inside_Leg_to_Ground__c</fullName>
        <label>Inside Leg to Ground</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inside_Leg_to_Knee__c</fullName>
        <label>Inside Leg to Knee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jacket_Size__c</fullName>
        <label>Jacket Size</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limited_Company_Information_address__c</fullName>
        <label>Limited Company Information &amp; address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Link_To_Website__c</fullName>
        <formula>HYPERLINK(Agent__r.Account.Website, Agent__r.Account.Website, &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link To Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lower_Hip__c</fullName>
        <label>Lower Hip</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Makeup_skincare_allergies__c</fullName>
        <inlineHelpText>Any other makeup/skincare-only related allergies eg specific products</inlineHelpText>
        <label>Makeup/skincare allergies?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Measurement_Form__c</fullName>
        <label>Measurement Form</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mens</fullName>
                </value>
                <value>
                    <fullName>Ladies</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Gender Neutral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Measurements_last_updated__c</fullName>
        <label>Measurements last updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Medical_Conditions__c</fullName>
        <description>ENO should be aware of</description>
        <label>Medical Conditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Min_Armhole_circumference__c</fullName>
        <label>Min Armhole circumference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile_number__c</fullName>
        <label>Mobile number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Modern_Trouser_Waist__c</fullName>
        <label>Modern Trouser Waist</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_as_per_passport__c</fullName>
        <inlineHelpText>Incl First, Middle &amp; Last Names(s)</inlineHelpText>
        <label>Name as per passport</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_GP_and_contact_details__c</fullName>
        <label>Name of GP and contact details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nape_to_Calf__c</fullName>
        <label>Nape to Calf</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nape_to_Ground__c</fullName>
        <label>Nape to Ground</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nape_to_Jacket_Length__c</fullName>
        <label>Nape to Jacket Length</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nape_to_Knee__c</fullName>
        <label>Nape to Knee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nape_to_Waist_Back__c</fullName>
        <label>Nape to Waist Back</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nape_to_Waist_Front__c</fullName>
        <label>Nape to Waist Front</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <label>Nationality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neck_Base__c</fullName>
        <label>Neck Base</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Neck__c</fullName>
        <label>Neck</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Nationality_if_applicable__c</fullName>
        <label>Other Nationality (if applicable)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outer_Arm_to_Elbow__c</fullName>
        <label>Outer Arm to Elbow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outer_Arm_to_Wrist__c</fullName>
        <label>Outer Arm to Wrist</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outer_Leg_to_Knee__c</fullName>
        <label>Outer Leg to Knee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outside_Leg_to_Ankle__c</fullName>
        <label>Outside Leg to Ankle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outside_Leg_to_Ground__c</fullName>
        <label>Outside Leg to Ground</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overbust__c</fullName>
        <label>Overbust</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Performer_Second_Name__c</fullName>
        <label>Performer Second Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Preferred_Bra_Band__c</fullName>
        <label>Preferred Bra Band</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_pronouns__c</fullName>
        <label>Preferred pronouns</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Artist__c</fullName>
        <label>Relationship to Artist</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Soprano</fullName>
                </value>
                <value>
                    <fullName>Mezzo-soprano</fullName>
                </value>
                <value>
                    <fullName>Contralto</fullName>
                </value>
                <value>
                    <fullName>Countertenor</fullName>
                </value>
                <value>
                    <fullName>Tenor</fullName>
                </value>
                <value>
                    <fullName>Baritone</fullName>
                </value>
                <value>
                    <fullName>Bass-Baritone</fullName>
                </value>
                <value>
                    <fullName>Bass</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Conductor</fullName>
                </value>
                <value>
                    <fullName>Designer (Any)</fullName>
                </value>
                <value>
                    <fullName>Choreographer/ Movement Director</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Actor</fullName>
                </value>
                <value>
                    <fullName>Dancer</fullName>
                </value>
                <value>
                    <fullName>Acrobat</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Chorus (soprano)</fullName>
                </value>
                <value>
                    <fullName>Chorus (mezzo)</fullName>
                </value>
                <value>
                    <fullName>Chorus (Tenor)</fullName>
                </value>
                <value>
                    <fullName>Chorus (Bass)</fullName>
                </value>
                <value>
                    <fullName>Chorus (Countertenor)</fullName>
                </value>
                <value>
                    <fullName>Extra Chorus</fullName>
                </value>
                <value>
                    <fullName>ENO staff appearing onstage</fullName>
                </value>
                <value>
                    <fullName>Assistant Conductor</fullName>
                    <isActive>false</isActive>
                    <label>Assistant Conductor</label>
                </value>
                <value>
                    <fullName>If Role is &apos;Other&apos; please specify</fullName>
                    <isActive>false</isActive>
                    <label>If Role is &apos;Other&apos; please specify</label>
                </value>
                <value>
                    <fullName>Revival Director (if applicable)</fullName>
                    <isActive>false</isActive>
                    <label>Revival Director (if applicable)</label>
                </value>
                <value>
                    <fullName>Staff Director (if applicable)</fullName>
                    <isActive>false</isActive>
                    <label>Staff Director (if applicable)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_or_Group__c</fullName>
        <label>School or Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seat_Hips__c</fullName>
        <label>Seat (Hips)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seat__c</fullName>
        <label>Seat</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shoe_Size__c</fullName>
        <label>Shoe Size</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shoes__c</fullName>
        <label>Shoes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shoulder_Width__c</fullName>
        <label>Shoulder Width</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shoulder__c</fullName>
        <label>Shoulder</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shoulder_point_to_S_P__c</fullName>
        <label>Shoulder point to S.P</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shoulder_to_Bust_Point__c</fullName>
        <label>Shoulder to Bust Point</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shoulder_to_Under_Bust__c</fullName>
        <label>Shoulder to Under Bust</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shoulder_to_elbow__c</fullName>
        <label>Shoulder to elbow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shoulder_to_wrist__c</fullName>
        <label>Shoulder to wrist</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shoulders_to_Waist_Back__c</fullName>
        <label>Shoulders to Waist Back</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shoulders_to_Waist_Front__c</fullName>
        <label>Shoulders to Waist Front</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Show_on_callsheet_as_creative__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show on callsheet as creative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sleeve_Length_to_Wrist__c</fullName>
        <label>Sleeve Length (to Wrist)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Residence__c</fullName>
        <label>Tax Residence</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Temple_to_Temple_Back_in_cm__c</fullName>
        <label>Temple to Temple Back (in cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temple_to_Temple_Front_in_cm__c</fullName>
        <label>Temple to Temple Front (in cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <inlineHelpText>(Sir/Dame/Post nominal letters eg CBE etc)</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Hip__c</fullName>
        <label>Top Hip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trouser_Size__c</fullName>
        <label>Trouser Size</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Under_Bust_Expanded__c</fullName>
        <label>Under Bust Expanded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Under_Bust__c</fullName>
        <label>Under Bust</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Underwear_size__c</fullName>
        <label>Underwear size</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT_Number__c</fullName>
        <label>VAT Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Visa_Information__c</fullName>
        <description>Where Applicable</description>
        <label>Visa Information</label>
        <length>30</length>
        <type>Text</type>
    </fields>
</CustomObject>